# estella

./: .gitignore  .gitmodules  BUSINESS_MODEL.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  PROVENANCE.md  README.md  VERSIONING.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  toolchain.manifest.json
.github/workflows/: build.yml  cross-platform.yml  docs.yml  release-desktop.yml
build-tools/: build.config.js  cli.js  manifest.js  release.js
build-tools/basis/: README.md  encoder.d.mts  encoder.mjs
build-tools/tasks/: check-examples.js  eht.js  examples.js  sdk.js  shader-embeds.js  sync.js  wasm.js  watch.js
build-tools/toolchain/: package-emsdk.js  package.js  setup-emsdk.js
build-tools/utils/: emscripten.js  errorHelp.js  hash.js  logger.js
cmake/: ESEngineConfig.cmake  Emscripten.cmake
desktop/: .gitignore  README.md  electron-builder.yml  headless.html  index.html  package.json  panel-window.html  play.html  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/electron/: assetDb.ts  buildPlayRealm.ts  buildScripts.ts  cookAssets.ts  esengineResolve.ts  exportGame.ts  exportPlayable.ts  exportProgress.ts  exportWeChat.ts  extractSchemas.ts  importAssets.ts  launcher.ts  main.ts  preload.ts  projectFs.ts  projectWatcher.ts  sideModuleScan.ts
desktop/scripts/: editor-mcp-e2e.mjs  editor-mcp-tools.mjs  editor-mcp.mjs  headless-cooked-verify.mjs  headless-smoke.mjs  headless-verify.mjs  play-realm-verify.mjs
desktop/src/: App.tsx  gameHost.ts  headless.ts  main.ts  main.tsx  native-fs.ts  panel-window.ts  play.ts  playHost.ts  playableHost.ts  types.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tests/: add-sprite-entity.test.ts  asset-db.test.ts  asset-document.test.ts  asset-filter.test.ts  asset-refs.test.ts  asset-types.test.ts  audio-preview.test.ts  build-scripts.test.ts  commands.test.ts  component-clipboard.test.ts  cook-assets.test.ts  cooked-verify-fixture.test.ts  dynamic-enum.test.ts  editor-control-surface.test.ts  editor-history-dirty.test.ts  editor-mcp-tools.test.ts  editor-tools.test.ts  engine-commands.test.ts  engine-model-sync.test.ts  entity-clipboard.test.ts  export-desktop.test.ts  export-game.test.ts  export-playable.test.ts  export-progress.test.ts  export-wechat.test.ts  extract-schemas.test.ts  field-tooltip.test.ts  gizmo-local-pivot.test.ts  gizmo.test.ts  input-map-doc.test.ts  inspector-model.test.ts  ktx2-encode.test.ts  log-store.test.ts  outliner-columns.test.ts  outliner-controller.test.ts  outliner-folders.test.ts  outliner-model.test.ts  outliner-reorder.test.ts  paint-tiles.test.ts  play-protocol.test.ts  (+20 more)
docs/: ARCHITECTURE.md  CODE_COMMENTS.md  CODING_STYLE.md  Doxyfile  RC12_EDITOR_SEAM.md  README.md  REARCHITECTURE.md  REARCH_ANIMATION.md  REARCH_ASSETS.md  REARCH_EDITOR_AUTOMATION.md  REARCH_EDITOR_MODEL.md  REARCH_EDITOR_REALM.md  REARCH_ENGINE_INSTANCING.md  REARCH_FOUNDATION_CONSOLIDATION.md  REARCH_FRONTIER.md  REARCH_GUI.md  REARCH_IMPLEMENTATION_AUDIT.md  REARCH_PHYSICS.md  REARCH_PREFABS.md  REARCH_RC6_ASSETS.md  REARCH_RENDER.md  REARCH_SERIALIZATION.md  REARCH_SPINE.md  REARCH_SPINE_S2.md  REARCH_TILEMAP.md  SITE.md  build.ps1  build.sh
docs/astro/: astro.config.mjs  package.json
docs/landing/: index.html
editor/: package.json  rollup.config.js  vitest.config.ts
editor/src/: DockLayoutManager.ts  Editor.ts  MenuManager.ts  PreviewManager.ts  globals.d.ts  index.ts
examples/: ARCHITECTURE.md  ASSETS.md  README.md
examples/audio-demo/: project.esproject
examples/collision-layers/: project.esproject
examples/ecs-basics/: project.esproject
examples/event-system/: project.esproject
examples/hello-world/: project.esproject
examples/input-demo/: project.esproject
examples/particle-demo/: project.esproject
examples/physics-playground/: project.esproject
examples/physics-spinner/: project.esproject
examples/platformer/: project.esproject
examples/postprocess-effects/: project.esproject
examples/space-shooter/: project.esproject
examples/sprite-animation/: project.esproject
examples/sprite-rendering/: project.esproject
examples/tilemap-demo/: README.md  project.esproject
examples/tween-animation/: project.esproject
examples/ui-controls/: project.esproject
examples/ui-interaction/: project.esproject
examples/ui-layout/: project.esproject
sdk/: esengine.d.ts  package.json  rollup.config.js  tsconfig.json  vitest.config.ts  wasm.generated.ts
sdk/benchmarks/: commands.bench.ts  component.bench.ts  event.bench.ts  physics.bench.ts  query-cache-miss.bench.ts  query.bench.ts  spine.bench.ts  system.bench.ts  uiMath.bench.ts  wasm-boundary.bench.ts  wasm-vs-world.bench.ts  world-internals.bench.ts  world.bench.ts
sdk/src/: CoreApiBridge.ts  WasmBridge.ts  app.ts  assetTypes.ts  behavior.ts  blend.ts  cacheAsBitmap.ts  cacheBitmap.ts  commands.ts  component.generated.ts  component.ts  componentEntityFields.ts  context.ts  core-content.ts  core-render.ts  core-runtime.ts  core-sys.ts  core-ui.ts  core.ts  corePlugin.ts  customDraw.ts  defaults.ts  draw.ts  entityUtils.ts  env.ts  event.ts  filters.ts  frameCapture.ts  geometry.ts  gesture.ts  glDebug.ts  graphics.ts  hitArea.ts  hotReload.ts  index.ts  index.wechat.ts  input.ts  inputMap.ts  inputRouter.ts  lifecycle.ts  (+46 more)
sdk/tests/: AsyncCache.test.ts  FanLayoutProvider.test.ts  GridLayoutProvider.test.ts  LinearLayoutProvider.test.ts  README.md  RichTextLayout.test.ts  RichTextParser.test.ts  anim-clip-asset.test.ts  animator.test.ts  (+238 more)
tests/: CMakeLists.txt
tests/core/: test_log_format.cpp
tests/ecs/: test_registry.cpp  test_registry_ondestroy.cpp  test_registry_safety.cpp  test_sparse_set.cpp
tests/renderer/: MockGfxDevice.hpp  test_buffer_device.cpp  test_compressed_format.cpp  test_shader_device.cpp  test_shader_variant.cpp  test_state_tracker.cpp  test_texture_fb.cpp
tests/resource/: test_resource_pool.cpp
tests/text/: test_bitmap_font.cpp
tests/tilemap/: test_tilemap.cpp
tools/: asset-meta.js  check-gl-boundary.mjs  eht.py  migrate-asset-refs.js
(+1364 files in other folders)
